# my-fin

./: .env  .env.example  main.py  positions.db  pyproject.toml
docs/: DATA_PROVIDER_SWITCH.md
openspec/changes/add-fundamental-screening/: design.md  proposal.md  tasks.md
openspec/changes/add-fundamental-screening/specs/fundamental-analysis/: spec.md
openspec/changes/add-fundamental-screening/specs/market-screener/: spec.md
openspec/changes/archive/2026-05-07-refactor-logging-and-dry/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-refactor-logging-and-dry/specs/market-data-fetching/: spec.md
openspec/changes/archive/2026-05-08-upgrade-to-market-screener/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-upgrade-to-market-screener/specs/market-data-fetching/: spec.md
openspec/changes/archive/2026-05-10-fix-history-init-sqlite-error/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-10-fix-history-init-sqlite-error/specs/sqlite-chunked-insert/: spec.md
openspec/specs/database-schema-management/: spec.md
openspec/specs/market-screener/: spec.md
openspec/specs/system-observability/: spec.md
sql/sqlite/: 01_init_tables.sql
src/: __init__.py  config.py  main.py
src/data/: market.py
src/my_fin/: config.py  main.py
src/my_fin/data/: market.py
src/my_fin/notify/: bark.py
src/my_fin/state/: db.py  models.py
src/my_fin/strategy/: trend.py
src/notify/: bark.py
src/scripts/: init_history.py
src/state/: db.py  models.py
src/strategy/: screener.py  trend.py
(+1 files in other folders)
